...
        android:textColor="@color/colorPrimary"
        android:layout_marginEnd="@dimen/padding_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cities_txt"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bg_shape"
        android:padding="@dimen/padding_medium"
        android:inputType="text"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cities_desc_txt"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/submit_btn"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_shape"
        android:text="@string/submit_btn"
        android:imeOptions="actionDone"
...
